--- a/source/custom/base/_base_styles.scss
+++ b/source/custom/base/_base_styles.scss
@@ -2,6 +2,16 @@
     padding: 0;
 }
 
+.container {
+    margin: 5rem auto;
+    max-width: 1280px;
+
+    &__small {
+        max-width: 900px;
+    }
+}
+
+
 a {
     text-decoration: none;
 }
