--- a/source/custom/base/_typography.scss
+++ b/source/custom/base/_typography.scss
@@ -1,9 +1,22 @@
+* {
+
+    font-family: 'Raleway', sans-serif;
+}
+
 h2 {
     font-family: 'Suez One', serif;
-    font-size: 30px;
+    font-size: 26px;
+    margin: 2rem 0 1rem 0;
 }
 
 h3 {
     font-family: 'Suez One', serif;
-    font-size: 26px;
+    font-size: 24px;
+    margin: 2rem 0 1rem 0;
+}
+
+h4 {
+    font-family: 'Suez One', serif;
+    font-size: 20px;
+    margin: 2rem 0 .7rem 0;
 }
