--- a/source/custom/components/_components.scss
+++ b/source/custom/components/_components.scss
@@ -1,10 +1,13 @@
 @import 'article';
 @import 'blog';
 @import 'header';
+@import 'historia';
 @import 'home';
 @import 'footer';
 @import 'mapa';
 @import 'materialy';
 @import 'o-serwisie';
 @import 'praktyka';
+@import 'reguly';
+@import 'terminy';
 @import 'wiedza';
